# x-video-archiver

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  iphone-shortcut.md
tests/: test_resolver.py
x_video_tool/: __init__.py  config.py  resolver.py  server.py
x_video_tool/static/: app.js  index.html  styles.css
