[project]
name = "x-video-archiver"
version = "0.1.0"
description = "Private X/Twitter video resolver for iPhone Shortcuts."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "yt-dlp>=2024.12.13",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
